--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "devstart": "nodemon ./bin/www",
+    "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "morgan": "~1.9.1",
+    "nodemon": "^2.0.16",
+    "passport": "^0.5.3",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
 }
