--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.95.0",
+    "@aws-sdk/s3-request-presigner": "^3.95.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -15,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "morgan": "~1.9.1",
+    "node-fetch": "^3.2.4",
     "nodemon": "^2.0.16",
     "passport": "^0.5.3",
     "passport-jwt": "^4.0.0",
